--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-REDIS_ADDRESS=${REDIS_ADDRESS}
-REDIS_PASSWORD=${REDIS_PASSWORD}
-USE_REDIS_CACHE=${USE_REDIS_CACHE}
-REDIS_DB=${REDIS_DB}
-USE_MONGODB=${USE_MONGODB}
-MONGO_URI=${MONGO_URI}
-MONGO_DB=${MONGO_DB}
-PORT=${PORT}
-ALLOWED_REFERERS=${ALLOWED_REFERERS}
+REDIS_ADDRESS=
+REDIS_PASSWORD=
+USE_REDIS_CACHE=false
+REDIS_DB=
+USE_MONGODB=false
+MONGO_URI=
+MONGO_DB=
+PORT=8898
+ALLOWED_REFERERS=
