--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-REDIS_ADDRESS=
-REDIS_PASSWORD=
+REDIS_ADDRESS=127.0.0.1
+REDIS_PASSWORD=123456
 USE_REDIS_CACHE=false
-REDIS_DB=
+REDIS_DB=123456
 USE_MONGODB=false
-MONGO_URI=
-MONGO_DB=
+MONGO_URI=127.0.0.1
+MONGO_DB=123456
 PORT=8898
-ALLOWED_REFERERS=
+ALLOWED_REFERERS=gbs.cool
